--- a/csdldemo/src/main/resources/application.properties
+++ b/csdldemo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=csdldemo
+spring.application.name=CSDL_Demo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/csdl-demo?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
